[gd_scene load_steps=14 format=2]

[ext_resource path="res://data/images/player_right.png" type="Texture" id=1]
[ext_resource path="res://data/fonts/karmatic-arcade.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Start.gd" type="Script" id=5]
[ext_resource path="res://data/audio/startgame.wav" type="AudioStream" id=6]
[ext_resource path="res://data/images/grid.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=11]
size = 40
extra_spacing_top = 5
extra_spacing_bottom = 15
font_data = ExtResource( 2 )

[sub_resource type="ShortCut" id=5]

[node name="Start" type="Node"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 123.06, 423.937 )
color = Color( 0.482353, 0.482353, 0.482353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title1" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -236.622
margin_top = 32.0
margin_right = 234.378
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Boulder"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -303.5
margin_top = -7.5
margin_right = 303.5
margin_bottom = 71.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Storm"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deco1" type="AnimatedSprite" parent="."]
position = Vector2( 240, 240 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 2 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -106.0
margin_top = -234.0
margin_right = 106.0
margin_bottom = -160.0
rect_scale = Vector2( 1, 1.01736 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.0784314, 0.0784314, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TutorialButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.5
margin_top = -154.0
margin_right = 124.5
margin_bottom = -80.0
rect_scale = Vector2( 1, 1.01736 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.0784314, 0.0784314, 1 )
shortcut = SubResource( 5 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -124.5
margin_top = -74.0
margin_right = 124.5
rect_scale = Vector2( 1, 1.01736 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.819608, 0.0784314, 0.0784314, 1 )
shortcut = SubResource( 5 )
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="timeout" from="TutorialTimer" to="." method="_on_TutorialTimer_timeout"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
